--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "typecheck": "tsc",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(cjs|js|ts|jsx|tsx|css|md)\"",
     "format": "npm run prettier -- --list-different",
-    "format:write": "npm run prettier -- --write"
+    "format:write": "npm run prettier -- --write",
+    "prepare": "husky",
+    "validate": "run-s typecheck lint format"
   },
   "dependencies": {
     "@remix-run/node": "^2.8.1",
@@ -33,6 +35,8 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^9.0.11",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
